# pudao-mvp

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: Readme.md  formal-lane-mvp.md  tests-formal-lane-tdd.md
evidence/: formal_timings.ndjson
examples/: strategy-cd-ring-incident-rm-vms.yaml  strategy-chengdu-ring-vsl.yaml
launcher/: pudao
pudao/: __init__.py
pudao/cli/: pudao_cli.py
pudao/dsl/: id_registry.py  models.py  parser.py  strategy_schema.json
pudao/evidence/: evidence.py
pudao/gate/: formal_gate.py
pudao/hints/: suggester.py
pudao/smt/: encoder.py  invariants.py  solver.py
tests/: test_formal_basic.py
